<resources>
    <string name="app_name">HW2_mobile99</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="alarmEnabledKey">alarm_enabled</string>
    <string name="alarmTimeKey">alarm_time</string>
    <string name="alarmGyroThreshold">gyro_thresh</string>
    <string name="alarmPending">alarm_pending</string>
    <string name="wake_up_text">Wake Up Please !\nROTATE YOUR DEVICE</string>
</resources>